--- a/src/app/entry-form/entry-form.component.html
+++ b/src/app/entry-form/entry-form.component.html
@@ -19,6 +19,6 @@
             <label for="entryDate">Date</label>&nbsp;
             <input type='date' id="entryDate" required>
         </div>
-        <button type="submit" class="btn">Make entry</button>
+        <button type="submit" class="btn" (click)="goalForm.reset()">Make entry</button>
     </form>
   </div>
